--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.main {
+  margin-left: 100px;
+  background-color: #116366;
+  height: 100%;
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.left-nav {
+  color: whitesmoke;
+  position: absolute;
+  display: grid;
+  height: 100%;
+  width: 100px;
+  background-color: #2c3531;
+}
+
+.li {
+  margin-top: 32px;
+  margin-left: 10px;
+  height: 32px;
+}
+
+.s1 {
+  grid-row: 2/3;
+}
+
+.s2 {
+  grid-row: 3/4;
+}
+
+.gh {
+  grid-row: 2/3;
+  height: 32px;
+  margin-top: 32px;
+}
+
+.page {
+  color: #d9b08c;
+  display: grid;
+  grid-template-rows: 1fr 1fr 10fr 1fr;
+  height: 100%;
+  grid-template-columns: 1fr 9fr 1fr;
+}
+
+.title {
+  text-align: left;
+  font-size: 4rem;
+  grid-row: 2/3;
+  grid-column: 2/3;
+}
+
+.p-nav {
+}
+
+.social {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
 }
