--- a/src/App.css
+++ b/src/App.css
@@ -6,60 +6,19 @@
 }
 
 .main {
-  margin-left: 100px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
+    'Lucida Sans', Arial, sans-serif;
+
   background-color: #116366;
+  margin-left: 100px;
   height: 100%;
   width: 100%;
 }
 
-.left-nav {
-  color: whitesmoke;
-  position: absolute;
-  display: grid;
-  height: 100%;
-  width: 100px;
-  background-color: #2c3531;
-}
-
-.li {
-  margin-top: 32px;
-  margin-left: 10px;
-  height: 32px;
-}
-
-.s1 {
-  grid-row: 2/3;
-}
-
-.s2 {
-  grid-row: 3/4;
-}
-
-.gh {
-  grid-row: 2/3;
-  height: 32px;
-  margin-top: 32px;
-}
-
-.page {
-  color: #d9b08c;
-  display: grid;
-  grid-template-rows: 1fr 1fr 10fr 1fr;
-  height: 100%;
-  grid-template-columns: 1fr 9fr 1fr;
-}
-
-.title {
-  text-align: left;
-  font-size: 4rem;
-  grid-row: 2/3;
-  grid-column: 2/3;
-}
-
-.p-nav {
-}
-
-.social {
-  display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+@media only screen and (max-width: 500px) {
+  .main {
+    margin-top: 50px;
+    margin-left: 0px;
+    width: 100vw;
+  }
 }
