--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media only screen and (max-width: 500px) {
+  body {
+    font-size: 10px;
+  }
+}
