--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -1,10 +1,10 @@
 .nav {
-  color: whitesmoke;
-  position: absolute;
+  color: #edf5e1;
+  position: fixed;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   width: 100px;
   background-color: #2c3531;
 }
@@ -35,6 +35,7 @@
 .dd-nav {
   background-color: #2c3531;
   border-radius: 15%;
+  min-width: 75px;
 }
 
 .btn {
