--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   width: 100%;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px), (max-height: 425px) {
   .main {
     margin-top: 50px;
     margin-left: 0px;
