--- a/src/components/components.css
+++ b/src/components/components.css
@@ -82,13 +82,19 @@ a {
   }
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 501px), (max-height: 426px) {
+  .dd {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 1000px), (max-height: 425px) {
   .prof-pic {
     width: 700px;
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px), (max-height: 425px) {
   .title {
     font-size: 2rem;
   }
