--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -50,7 +50,7 @@
   margin: 3px;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 500px), (max-height: 425px) {
   .last {
     margin-top: -10px;
   }
