--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -50,6 +50,16 @@
   margin: 3px;
 }
 
+@media only screen and (min-width: 501px) and (min-height: 426px) {
+  .dd {
+    display: none;
+  }
+
+  .dd-nav {
+    display: none;
+  }
+}
+
 @media only screen and (max-width: 500px), (max-height: 425px) {
   .last {
     margin-top: -10px;
